# syn-novel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
config/examples/: chinese-novel.yaml  english-novel.yaml
docs/: WP_API.json  chapter-splitter-prd.md  contracts.md  release-workflow.md  userscript-install.md  web-automation-prd.md
docs/superpowers/plans/: 2026-03-20-nu-sync-accuracy-refactor-plan.md
docs/superpowers/specs/: 2026-03-20-nu-sync-accuracy-design.md
src/chapter_splitter/: config.py  detector.py  formatter.py  main.py  parser.py  pipeline.py  renderer.py  splitter.py
src/chapter_splitter/llm/: __init__.py  client.py  deepseek.py  grok.py
src/chapter_splitter/utils/: __init__.py  text.py
tests/: test_formatter.py  test_parser.py  test_splitter.py  test_text_utils.py
tests/fixtures/: chinese_sample.txt  english_sample.txt
tests/userscripts/: fox-entry-regression.test.mjs  nu-entry-regression.test.mjs  nu-sync-rules.test.mjs
userscripts/: foxaholic-helper.user.js  novelupdates-helper.user.js
userscripts/shared/: constants.js  contracts.js  dom.js  logger.js  nu-sync-rules.js  parser.js  storage.js  ui.js
